# efortunes

./: Makefile.in  NEWS  README  TODO  configure.in
ebin/: efortunes_app.app
etc/: yaws.conf.in
include/: efortunes_definitions.hrl  efortunes_records.hrl
messages/: messages.ES
src/: Makefile.in  efortunes_HTMLFormatting.erl  efortunes_action_addFortune.erl  efortunes_action_findAllFortunes.erl  efortunes_action_findFortune.erl  efortunes_action_login.erl  efortunes_action_logout.erl  efortunes_action_removeFortune.erl  efortunes_action_updateFortune.erl  efortunes_app.erl  efortunes_dao_fortune.erl  efortunes_dao_userProfile.erl  efortunes_dateOperations.erl  efortunes_dbManager.erl  efortunes_facade.erl  efortunes_httpRequestProcessor.erl  efortunes_httpSessionManager.erl  efortunes_launcher.erl  efortunes_messagesTrader.erl  efortunes_super.erl  efortunes_viewUtils.erl  efortunes_yawsUtils.erl  mnesia_actionProcessor.erl  mnesia_utils.erl
src/HTMLView/: createNewFortune.yaws  doCreateNewFortune.yaws  doListAllFortunes.yaws  doLogin.yaws  doLogout.yaws  doRemoveFortune.yaws  doUpdateFortune.yaws  editFortune.yaws  error.yaws  footer.yaws  header.yaws  home.yaws  index.yaws  login.yaws  sidebar-anonymous.yaws  sidebar-authenticated.yaws  sidebar.yaws  statusbar-authenticated.yaws  statusbar.yaws  styles.css  success.yaws
src/HTMLView/javascript/: validation.js
